# weightslab

./: .coverage  .gitattributes  .gitignore  AGENTS.md  AUTO_CHECKPOINT_COMPLETE.md  AUTO_CHECKPOINT_GUIDE.md  AUTO_CHECKPOINT_SUMMARY.md  CHANGELOG.md  CHECKPOINT_V2_GUIDE.md  CHECKPOINT_V2_SUMMARY.md  CHECKPOINT_V3_DIRECTORY_STRUCTURE.md  CHECKPOINT_V3_GUIDE.md  CLAUDE.md  QUICK_START_SECURE_DOCKER.md  README.md  SECURE_DOCKER_SETUP.md  SIGNALS_AND_EVAL_FN_GUIDE.md  VALIDATE_REFACTOR_SUMMARY.md  _ck.txt  agent_config.yaml  cleanup_test.py  fix_auto_checkpoint.py  fix_checkpoint_manager.py  fix_escape.py  fix_quotes.py  onboard_to_weightslab.md  package-lock.json  pyproject.toml  requirements.txt  s -ExecutionPolicy RemoteSigned) ; (& cUsersGuillaumePELLUETDocumentsCodesweightslab.venvScriptsActivate.ps1)  setup.py  test_auto_checkpoint.py  test_output.txt  test_run.txt
.claude/: settings.local.json
.github/agents/: weights-studio-frontend.agent.md
.github/workflows/: .ruff.toml  ci.yml  ci_tests.yml  cleanup.yml  dev-release.yml  docs-pages.yml  release.yml
.history/: .gitignore_20260219102659  .gitignore_20260224174912  .gitignore_20260224174927  .gitignore_20260224175056  .gitignore_20260224175057  .gitignore_20260224175136  .gitignore_20260224180126  .gitignore_20260225103752  requirements_20260225103822.txt  requirements_20260225114340.txt  requirements_20260225114413.txt  requirements_20260225114423.txt  requirements_20260225114428.txt  requirements_20260225114631.txt  requirements_20260225114839.txt  requirements_20260225115105.txt  requirements_20260225115110.txt
.lh/: .gitignore.json
certs/: backend-server.crt  backend-server.key  ca.crt
docker/docker/: .env.example  docker-compose.yml
docs/: agent.rst  audit_logging.rst  conf.py  configuration.rst  contributing_ci.rst  data_exploration.rst  ddp_design.md  four_way_approach.rst  hyperparameters.rst  index.rst  logger.rst  model_interaction.rst  pytorch_lightning.rst  quickstart.rst  requirements.txt  segmentation_usecase.rst  ultralytics.rst  usage.rst  usecases.rst  user_commands.rst  user_functions.rst  weights_studio.rst
docs/_static/: custom.css  examples-gallery.js  github-stars.js  version-switcher.js  wl-ribbon.js  wl-topnav.js
docs/examples/: index.rst
docs/grpc/: audit_logger.rst  grpc_functions.rst  index.rst
docs/usage/: docker.rst  good_practice.rst  parameters.rst
examples/: checkpoint_v2_example.py  secure_docker_example.py
examples/advanced-pytorch_example/: mnist_training.py  mnist_training_config.yaml
examples/toy-pytorch_example/: mnist_training.py  mnist_training_config.yaml
root_log_dir/: .checkpoint_manager_state.json
root_log_dir/checkpoints/: manifest.yaml
tests/: __init__.py  data_samples_with_ops_test.py  experiment_test.py  model_with_ops_test.py  modules_with_ops_test.py  test_secure_communication.py  test_secure_docker.py  test_src_functions.py  test_utils.py  tracking_test.py
tests/backend/: test_cli.py  test_data_loader_interface.py  test_instance_signal_logger.py  test_ledgers.py  test_logger_core.py  test_model_interface_unit.py  test_ui_docker_bridge.py  test_write_dataframe.py  test_write_history.py
tests/chaos_monkeys_utests/: test_grpc_chaos_monkey_robustness.py
tests/components/: test_checkpoint_workflow.py
tests/gRPC/: test_grpc_histogram_categorical.py  test_grpc_tag_operations.py  test_grpc_user_actions.py
tests/general/: test_auditor_mode.py  test_cli.py  test_logger_snapshot_rotation.py  test_signal_refinements.py  test_signals.py  test_signals_wrapping.py
tests/model/: test_constraint_generation.py  test_logger.py  test_model_with_ops.py  test_model_with_ops_unit.py  test_tracking.py
tests/modules/: test_modules_with_ops.py
tests/utils/: test_computational_graph_utils_unit.py  test_logs_unit.py  test_modules_dependencies_unit.py  test_plot_graph_render_unit.py  test_plot_graph_unit.py  test_utils_tools_unit.py
tests/watchdog/: test_lock_monitor.py
ui/docker/: docker-compose.yml  source-env.ps1
ui/envoy/: envoy.yaml  envoy.yaml.template
unittests/: test_checkpoint.py  test_model_operations.py  test_model_with_ops.py
weightslab/: __init__.py  art.py  checkpoint.py  cli.py  data_samples_with_ops.py  experiment.py  ledgers.py  model_with_ops.py  modules_with_ops.py  neuron_ops.py  readme.md  src.py  tasks.py  telemetry.py  tracking.py  tunnel.py  ui_docker_bridge.py
weightslab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
weightslab/backend/: audit_logger.py  cli.py  data_loader_interface.py  dataloader_interface.py  explore_mode.py  ledgers.py  logger.py  model_interface.py  optimizer_interface.py  watcher_editor.py
weightslab/components/: __init__.py  auto_checkpoint.py  checkpoint.py  checkpoint_manager.py  checkpoint_manager_v2.py  ddp_basic_building_blocks.py  ddp_design_notes.md  ddp_planes.py  evaluation_controller.py  experiment_dump.py  experiment_hash.py  global_monitoring.py  monitoring.py  parallel_primitives.py  parallel_state.py  tasks.py  tracking.py
weightslab/data/: array_proxy.py  data_samples_with_ops.py  data_utils.py  dataframe_manager.py  h5_array_store.py  h5_dataframe_store.py  point_cloud_utils.py  sample_stats.py
weightslab/examples/: README.md  __init__.py  example_h5_array_storage.py  fashion_mnist.py  fashion_mnist_global.py  fashion_mnist_global_voutside.py  ledger_demo.py  mnist.py  mnist_v2.py  simple_usage_demo.py  training_tools.py
weightslab/experiment/: board.py  experiment.py  next_gen_experiment.py  trainer_worker.py
weightslab/integrations/: __init__.py
weightslab/layers/: modules_with_ops.py
weightslab/models/: model_with_ops.py  monkey_patcher.py
weightslab/modules/: modules_with_ops.py  neuron_ops.py
weightslab/proto/: computational_graph.proto  computational_graph_v2.proto  experiment_command.proto  experiment_service.proto  experiment_service_pb2.py  experiment_service_pb2_grpc.py  experiment_v2.proto  services.proto  streaming_signals.proto
weightslab/security/: __init__.py  cert_auth_manager.py
weightslab/stubs/: experiment_command_pb2.py  (+5 more)
(+700 files in other folders)
