[build-system]
requires = ["setuptools>=61", "wheel", "build", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "weightslab"
dynamic = ["version"]
description = "Paving the way between black-box and white-box modeling."
readme = "README.md"
authors = [
  { name = "Alexandru-Andrei Rotaru", email = "alexandru@graybx.com" },
  { name = "Guillaue Pelluet", email = "guillaue@graybx.com" }
]
license = { text = "BSD 2-clause" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
]

# Sanitized runtime dependencies converted from requirements.txt
dependencies = [
  "torch==2.1.2",
  "torchvision==0.16.2",
  "torchaudio==2.1.2",
  "torchinfo==1.8.0",
  "torchmetrics==1.8.2",
  "tensorboard==2.20",
  "pytorch-lightning==2.6.1",
  "filelock==3.15.4",
  "fsspec==2024.6.0",
  "Jinja2==3.1.4",
  "MarkupSafe==2.1.5",
  "graphviz==0.21",
  "mpmath==1.3.0",
  "pandas==2.2.3",
  "zstandard==0.23.0",
  "sympy==1.12.1",
  "tqdm==4.66.4",
  "typing_extensions==4.12.2",
  "dill==0.4.0",
  "PyYAML==6.0.3",
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "protobuf==6.33",
  "numpy>=1.25.2,<2.0",
  "onnx==1.20.0",
  "onnxruntime==1.23.2",
  "xxhash==3.6.0",
  "tables==3.10",
  "httpx==0.28.1",
  "pydantic==2.11.10",
  "dotenv==0.9.9",
  "h5py==3.15.1",
  "Pillow==11.0.0",
  "langchain-core==1.2.7",
  "langchain-ollama==1.0.1",
  "langchain-openai==1.1.7",
  "opencv-python==4.6.0.66",
]

[project.urls]
Homepage = "https://github.com/GrayboxTech/weightslab"

[tool.setuptools.packages.find]
where = ["."]
include = ["weightslab", "weightslab.*"]

[tool.setuptools_scm]
# Write the generated version into a small module so your package can import it at runtime
write_to = "weightslab/_version.py"
# Optional: choose version/local schemes — defaults are usually fine
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
