[build-system]
requires = ["setuptools>=61", "wheel", "build", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "weightslab"
dynamic = ["version"]
description = "Paving the way between black-box and white-box modeling."
readme = "README.md"
authors = [
  { name = "Alexandru-Andrei Rotaru", email = "alexandru@graybx.com" },
  { name = "Guillaue Pelluet", email = "guillaue@graybx.com" }
]
license = { text = "BSD 2-clause" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
]

# Runtime dependencies for the base package.
#
# Packaging note:
# - Avoid strict `==` pins in published libraries to reduce resolver conflicts for users.
# - Prefer compatible ranges, then pin exact versions only in CI/lockfiles.
dependencies = [
  # Core data / persistence
  "numpy>=1.25.2,<2.0; python_version < '3.13'",
  "numpy>=2.1,<3; python_version >= '3.13'",
  "pandas>=2.2.3,<3",
  "PyYAML>=6.0.3,<7",
  "dill>=0.3.8,<0.5",
  "zstandard>=0.22,<1",
  "h5py>=3.10,<4",
  "xxhash>=3.4,<4.1",
  "tables>=3.9,<4",  # h5 deps

  # PyTorch stack
  "torch>=2.1,<2.9; python_version < '3.13'",
  "torch==2.9; python_version >= '3.13'",
  "torchvision>=0.16,<0.24; python_version < '3.13'",
  "torchvision>=0.24,<1; python_version >= '3.13'",

  # Serving / schema
  "grpcio>=1.62,<2",
  "protobuf>=4.25,<7",
  "pydantic>=2.7,<3",

  # Imaging
  "Pillow>=10,<12",
  "opencv-python>=4.8,<5",
  "onnx>=1.15,<=1.20",

  # Utility used in examples and progress reporting
  "tqdm>=4.66,<5",

  # Environment variable loading (used by agent service)
  "python-dotenv>=1,<2",

  # Agent service runtime deps (imported by default module graph)
  "langchain-core>=0.3,<2",
  "langchain-ollama>=0.2,<2",
  "langchain-openai>=0.2,<2",
]

[project.optional-dependencies]
# Optional: runtime backend for ONNX model execution
onnx = [
  "onnxruntime>=1.17,<2",
  "onnxscript>=0.6.2,<0.7",
]

# Optional: developer tooling used for local development / codegen
dev = [
  "grpcio-tools>=1.62,<2",
  "torchinfo>=1.8,<2",
  "httpx>=0.27,<1",
]

utest = [
  "torchaudio>=2.1,<2.9; python_version < '3.13'",
  "torchaudio>=2.9,<3; python_version >= '3.13'",
  "torchmetrics>=1.3,<2",
  "pytorch-lightning>=2.2,<3",
  "tensorboard>=2.14,<3",
  "graphviz>=0.20,<1",
]

[project.scripts]
weightslab = "weightslab.ui_docker_bridge:main"

[project.urls]
Homepage = "https://github.com/GrayboxTech/weightslab"

[tool.setuptools.package-data]
"weightslab.ui" = ["*.yml", "*.yaml", "*.sh", "*.ps1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["weightslab", "weightslab.*"]

[tool.setuptools_scm]
# Write the generated version into a small module so your package can import it at runtime
write_to = "weightslab/_version.py"
# Optional: choose version/local schemes — defaults are usually fine
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
