[build-system]
requires = ["setuptools>=61", "wheel", "build", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "weightslab"
dynamic = ["version"]
description = "Paving the way between black-box and white-box modeling."
readme = "README.md"
authors = [
  { name = "Alexandru-Andrei Rotaru", email = "alexandru@graybx.com" },
  { name = "Guillaue Pelluet", email = "guillaue@graybx.com" }
]
license = { text = "BSD 2-clause" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
]

# Runtime dependencies for the base package.
#
# Packaging note:
# - Avoid strict `==` pins in published libraries to reduce resolver conflicts for users.
# - Prefer compatible ranges, then pin exact versions only in CI/lockfiles.
dependencies = [
  # Core data / persistence
  # numpy 2 is supported: weightslab's source uses no numpy-1-only APIs, and its
  # compiled deps (torch, pandas, h5py, tables, onnx) ship numpy-2 wheels at the
  # versions pip resolves. Range left open (<3) so Colab's numpy 2.x installs
  # without a downgrade. Verified: import + torch/pandas interop + gRPC on np 2.4.
  "numpy>=1.24,<3",
  # Floor at 2.2.2 (not 2.2.3) so Colab's pinned pandas==2.2.2 is accepted
  # as-is: google-colab 1.0.0 requires pandas==2.2.2, and a >=2.2.3 floor forced
  # an upgrade to 2.3.x that breaks that pin. Clean installs still pick the
  # newest numpy-2-safe pandas (2.3.x).
  "pandas>=2.2.2,<3",
  "duckdb>=1.1,<2",  # signal/sample/instance history store
  "PyYAML>=6.0.3,<7",
  "dill>=0.3.8,<0.5",
  "zstandard>=0.22,<1",
  "h5py>=3.10,<4",
  "xxhash>=3.4,<4.1",
  "tables>=3.9,<4",  # h5 deps

  # PyTorch stack. Upper bounds left open (<3 / <1) so a pre-installed modern
  # torch (e.g. Colab's torch 2.9 / torchvision 0.24) is accepted as-is instead
  # of being downgraded — the reinstall churn is what dragged numpy across the
  # 1.x/2.x boundary and broke the ABI. Floors kept; pip picks a compatible
  # numpy-2 build on a clean install.
  "torch>=2.1,<=2.9",
  "torchvision>=0.16,<1",
  "torchmetrics>=1.9",

  # Serving / schema
  "grpcio>=1.80,<2",
  # Floor tracks the checked-in gencode: the *_pb2.py are regenerated with
  # grpcio-tools ~=1.68 (protoc gencode 5.28.1), so any runtime >=5.28.1 satisfies
  # protobuf's runtime>=gencode rule — including Colab's stock protobuf 5.29.6, so
  # NO upgrade is forced on Colab. IMPORTANT: regenerate the stubs with
  # grpcio-tools ~=1.68 to keep the gencode Colab-compatible; a newer grpcio-tools
  # bumps the gencode and reintroduces the VersionError on Colab. Upper bound <8
  # keeps modern runtimes (7.x) working.
  "protobuf>=5.28.1,<8",
  "pydantic>=2.7,<3",

  # Imaging
  "Pillow>=10,<12",
  "graphviz>=0.20,<1",

  # Modeling
  "onnx>=1.15,<=1.20",

  # Utility used in examples and progress reporting
  "tqdm>=4.66,<5",

  # Environment variable loading (used by agent service)
  "python-dotenv>=1,<2",

  # Agent service runtime deps (imported by default module graph)
  "langchain-core>=0.3,<2",
  "langchain-ollama>=0.2,<2",
  "langchain-openai>=0.2,<2",
]

[project.optional-dependencies]
# Optional: ultralytics onboarding
ultralytics = [
  "ultralytics>=8.4.16",
]

# Optional: runtime backend for ONNX model execution
onnx = [
  "onnxruntime>=1.17,<2",
  "onnxscript>=0.6.2,<0.7",
]

# Optional: developer tooling used for local development / codegen
dev = [
  "grpcio-tools>=1.62,<2",
  "torchinfo>=1.8,<2",
  "httpx>=0.27,<1",
]

utest = [
  "torchaudio>=2.1,<2.9; python_version < '3.13'",
  "torchaudio>=2.9,<3; python_version >= '3.13'",
  "torchmetrics>=1.3,<2",
  "pytorch-lightning>=2.2,<3",
  "tensorboard>=2.14,<3",
  "pytest>=9.0.2",
]

[project.scripts]
weightslab = "weightslab.cli:main"

[project.urls]
Homepage = "https://github.com/GrayboxTech/weightslab"

[tool.setuptools]
# Ship non-.py assets that live inside the package (cert scripts, bundled
# examples, pre-built UI). Combined with the explicit globs below so the CLI
# subcommands (`start`, `start example`, `se`) find their files in a
# pip-installed package.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["weightslab", "weightslab.*"]

[tool.setuptools.package-data]
# Bundle the cert-generation scripts, the example projects (main.py, config.yaml,
# sample data), and the pre-built Weights Studio SPA that `weightslab start`
# serves directly — no Docker required.
weightslab = [
  "ui/utils/**/*",
  "examples/**/*",
  # Pre-built Weights Studio SPA served by `weightslab start`.
  "ui/static/**/*",
]

[tool.setuptools.exclude-package-data]
# Never ship generated/local artifacts even if present on disk at build time.
weightslab = [
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.setuptools_scm]
# Write the generated version into a small module so your package can import it at runtime
write_to = "weightslab/_version.py"
# Optional: choose version/local schemes — defaults are usually fine
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
